aplicando archunit ao projeto